modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 site: History Blog
 title: History Blog
-greetings: International Conflicts &emdash; History Blog
+greetings: International Conflicts — History Blog
 description: >-
   Welcome to my history blog.
 lang: en-US
