--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ timezone:  America/Guayaquil
 repo: # site repo [optional]
 data-theme: dark # default theme "dark" | "light"
 discus-identifier: powex # replace with your disqus shortname
-comments-enabled: false # true to enable disqus comments, false to hide them
+comments-enabled: true # true to enable disqus comments, false to hide them
 
 author:
   name: Cesar
