--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ lang: en-US
 timezone:  America/Guayaquil
 repo: # site repo [optional]
 data-theme: dark # default theme "dark" | "light"
-discus-identifier: powex # replace with your disqus shortname
+discus-identifier: history-blog # replace with your disqus shortname
 comments-enabled: true # true to enable disqus comments, false to hide them
 
 author:
